po: update po/fr_FR/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/menu.po
+++ b/po/fr_FR/menu.po
@@ -20,9 +20,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-16 20:39+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -139,8 +139,8 @@ msgid "Case Activity"
 msgstr "Activité du dossier"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Compte-rendu de dossier"
+msgid "Case Activity Audit"
+msgstr "Audit des activités du dossier"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -159,8 +159,8 @@ msgid "Assign to Another Client"
 msgstr "Assigner à un nouveau client"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Créer l'activité vers le dossier"
+msgid "File on Case"
+msgstr "Fichier dans le Dossier"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -184,10 +184,6 @@ msgstr "États du dossier"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Médias de rencontres"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Changer le statut de l'activité"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -262,6 +258,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Types d'opération"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Nouveau paiement"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -279,9 +279,15 @@ msgstr "Cartes de crédit acceptées"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "Type de crédit indirect"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Contributions"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Contributions Récurrentes"
@@ -332,6 +338,23 @@ msgstr "Lots de comptabilité"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Export lot de comptabilité"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Voir le paiement"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "Paramètres du module CiviContribute"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Facture format PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Facture par courriel"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -485,6 +508,11 @@ msgstr "Préférences de recherche"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Préférences de date"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Menu de navigation"
 
@@ -518,10 +546,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Programmer un rappel"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Cela ne sera jamais vu"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -539,6 +563,11 @@ msgstr "Formats d'impression de page (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Options liées aux formules de communication"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Formules de salutation par courriel"
 
@@ -552,8 +581,9 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Formats de destinataires"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
+msgid "Languages, Currency, Locations"
 msgstr "Langue, devises et localisation"
 
 #: xml/templates/civicrm_navigation.tpl
@@ -705,10 +735,6 @@ msgid "Administer CiviCRM"
 msgstr "Administrer CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Éléments de liste de choix"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Tarifications"
 
@@ -776,10 +802,6 @@ msgstr "Constructeur de recherches"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Recherches personnalisées"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Recherche simple"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -871,6 +893,10 @@ msgid "CiviCRM Blog"
 msgstr "Blog CiviCRM"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Indicateur du dossier"
 
@@ -925,6 +951,10 @@ msgid "Import Activities"
 msgstr "Importer l'historique des activités"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Importer une liste à choix multiples personnalisée"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Mettre à jour CiviCRM"
 
@@ -961,12 +991,16 @@ msgid "Browse Uploaded files"
 msgstr "Explorer les fichiers téléchargés"
 
 msgctxt "menu"
-msgid "Delete file"
-msgstr "Effacer fichier"
+msgid "Delete File"
+msgstr "Effacer le fichier"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Déconnexion"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "Interface de programmation CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -980,6 +1014,10 @@ msgstr "QUnit"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "ProfileEditor"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Confirmer les dates"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1076,6 +1114,10 @@ msgid "Event Online Registration"
 msgstr "Inscription en ligne à l'événement"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Evènement récurrent"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Créneaux de conférence"
 
@@ -1109,6 +1151,10 @@ msgstr "Retirer du panier"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Voir le panier"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Changer les sélections d'inscription"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1163,8 +1209,8 @@ msgid "Resubscribe"
 msgstr "Réabonnement"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Se désabonner"
+msgid "Opt-out"
+msgstr "Exclusion des envois de mails"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1299,6 +1345,11 @@ msgstr "Liste des comptes rendus"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "Nouvelles CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1437,6 +1488,16 @@ msgstr "Rechercher un envoi groupé de SMS"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Nouveau test A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "Gérer les tests A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Rapports sur les Adhérents"
 
@@ -1542,11 +1603,6 @@ msgstr "Localisation"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Langue, devises et localisation"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Liste des langues"
 
@@ -1564,6 +1620,11 @@ msgstr "Permissions (contrôle d'accès)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Paramètres système"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1632,6 +1693,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Statut de la subvention"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1642,8 +1708,13 @@ msgstr "Tous les rapports"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Aide"
+msgid "Support"
+msgstr "Support"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr "Pour démarrer"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1652,18 +1723,43 @@ msgstr "Documentation"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Forums de la communauté"
+msgid "Ask a question"
+msgstr "Poser une question"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Participer"
+msgid "Get expert help"
+msgstr "Obtenir l'aide d'un expert"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "À propos"
+msgid "About CiviCRM"
+msgstr "À propos de CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr "Enregistrer votre site"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr "Rejoindre CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Développeur"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "API Explorateur"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Documents à destination des développeurs"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1890,6 +1986,11 @@ msgstr "Fournit un état détaillé des contributions et paiements, comprenant l
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Fournit l'information à propos du status des contributions récurrentes"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "État des adhésions"
 
@@ -2059,144 +2160,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Compte rendu détaillé des démarchages et autres sondages."
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Audit des activités du dossier"
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
-msgstr "Nouveau paiement"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "Type de crédit indirect"
-
-msgctxt "menu"
-msgid "View Payment"
-msgstr "Voir le paiement"
+msgid "System Status"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Options liées aux formules de communication"
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Importer une liste à choix multiples personnalisée"
-
-msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Changer les sélections d'inscription"
+msgid "Components"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
-msgstr "Statut de la subvention"
+msgid "Extensions"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
-msgstr "Développeur"
+msgid "Activity Details"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
-msgstr "API Explorateur"
+msgid "Activity Summary"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Documents à destination des développeurs"
-
-msgctxt "menu"
-msgid "File on Case"
-msgstr "Fichier dans le Dossier"
+msgid "Shows activity statistics by type / date"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "Paramètres du module CiviContribute"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Facture format PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Facture par courriel"
+msgid "Pledge Detail"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Préférences de date"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Effacer le fichier"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "Interface de programmation CiviCRM"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Confirmer les dates"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Evènement récurrent"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Exclusion des envois de mails"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Nouveau test A/B"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "Gérer les tests A/B"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr "Support"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr "Pour démarrer"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr "Poser une question"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr "Obtenir l'aide d'un expert"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "À propos de CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr "Enregistrer votre site"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr "Rejoindre CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Fournit l'information à propos du status des contributions récurrentes"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
