po: update po/fr_FR/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -9,6 +9,7 @@
 # Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
+# ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Guillaume <guillaume@ordi-service.fr>, 2016
 # Mathieu Lutfy <mathieu@bidon.ca>, 2014-2015
 # Peter <webmaster@lebouclier.com>, 2015-2016
@@ -18,9 +19,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2016-04-15 06:21+0000\n"
-"Last-Translator: Guillaume <guillaume@ordi-service.fr>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 16:48+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -136,8 +137,18 @@ msgid ""
 msgstr "Une valeur auto_increment_increment plus grande que 1 n'est pour l'instant pas supportée. Veuillez s'il vous plaît consulter la référence CRM-7923 pour plus de détails et éventuelles solutions."
 
 #: install/index.php
-msgid "Does MySQL thread_stack meet minimum (%1k)"
+msgid "Is the provided database name valid?"
 msgstr ""
+
+#: install/index.php
+msgid ""
+"The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
+" as characters in the name."
+msgstr ""
+
+#: install/index.php
+msgid "Does MySQL thread_stack meet minimum (%1k)"
+msgstr "Est-ce-que la valeur des procédures stockées de MySQL (thread_stack) a la valeur minimum requise (%1k)"
 
 #: install/index.php
 msgid "Can I access/create the database?"
@@ -242,7 +253,7 @@ msgstr "Serveur Web reconnu"
 msgid ""
 "You seem to be using an unsupported webserver. The server variables "
 "SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME need to be set."
-msgstr ""
+msgstr "Il semble que vous utilisiez un serveur web non pris en charge. Les variables du serveur SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME besoin d'être réglé.\\"
 
 #: install/index.php
 msgid "JSON support"
@@ -261,7 +272,7 @@ msgid ""
 "XCache is installed and there are known compatibility issues between XCache "
 "and CiviCRM. Consider using an alternative PHP caching mechanism or disable "
 "PHP caching altogether."
-msgstr ""
+msgstr "XCache is installed and there are known compatibility issues between XCache and CiviCRM. Consider using an alternative PHP caching mechanism or disable PHP caching altogether."
 
 #: install/index.php
 msgid "Memory allocated (PHP config option 'memory_limit')"
@@ -320,7 +331,7 @@ msgstr "Impossible de déterminer la version installée de MySQL. Veuillez véri
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no."
-msgstr ""
+msgstr "Impossible de déterminer si MySQL supporte InnoDB. On suppose que non."
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
@@ -364,19 +375,19 @@ msgstr "Impossible d'ouvrir la table en écriture."
 
 #: install/index.php
 msgid "Could not query database server variables."
-msgstr ""
+msgstr "Impossible d'interroger les variables du serveur de base de données."
 
 #: install/index.php
 msgid "MySQL server auto_increment_increment is 1"
-msgstr ""
+msgstr "MySQL serveur auto_increment_increment est 1"
 
 #: install/index.php
 msgid "Could not get information about the thread_stack of the database."
-msgstr ""
+msgstr "Impossible d'obtenir des informations sur les procédures stockées de la base de données."
 
 #: install/index.php
 msgid "MySQL \"thread_stack\" is %1 kb"
-msgstr ""
+msgstr "MySQL \"thread_stack\" est %1 kb"
 
 #: install/index.php
 msgid "The database: '%1' does not exist."
@@ -402,7 +413,7 @@ msgstr "Oups ! Impossible de créer base de données %1"
 msgid ""
 "We encountered an error when attempting to create the database. Please check"
 " your MySQL server permissions and the database name and try again."
-msgstr ""
+msgstr "Nous avons rencontré une erreur lors de la tentative de créer la base de données. S'il vous plaît vérifier vos autorisations sur le serveur MySQL et le nom de la base de données et essayer à nouveau."
 
 #: install/index.php
 msgid ""
@@ -448,7 +459,7 @@ msgid ""
 "and Subscribers access to public CiviCRM forms and features. We recommend "
 "that you <a %1>review these permissions</a> to ensure that they are "
 "appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr ""
+msgstr "Les autorisations des utilisateurs de WordPress ont été automatiquement fixées - en donnant aux anonymes et aux abonnés l'accès aux formulaires et aux fonctions publiques de CiviCRM. Nous vous recommandons de <a %1> revoir ces autorisations </a> pour assurer qu'ils sont appropriés à vos besoins (<a %2> en savoir plus ... </a>)"
 
 #: install/index.php
 msgid "<a %1>Refer to the online documentation for more information</a>"
