--- a/po/gl_ES/install.po
+++ b/po/gl_ES/install.po
@@ -6,9 +6,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-14 17:49-0400\n"
-"PO-Revision-Date: 2014-05-07 18:08+0000\n"
-"Language-Team: Galician (Spain) (http://www.transifex.com/projects/p/civicrm/language/gl_ES/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 16:48+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Galician (Spain) (http://www.transifex.com/civicrm/civicrm/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -120,6 +121,16 @@ msgstr ""
 msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
+msgstr ""
+
+#: install/index.php
+msgid "Is the provided database name valid?"
+msgstr ""
+
+#: install/index.php
+msgid ""
+"The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
+" as characters in the name."
 msgstr ""
 
 #: install/index.php
