po: update po/he_IL/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/he_IL/extension.po
+++ b/po/he_IL/extension.po
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-01 14:33+0000\n"
-"Last-Translator: xnhy <mrottman3@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Hebrew (http://www.transifex.com/civicrm/civicrm/language/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,11 +27,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "תיקיית מטמון ההרחבות שלכם (%1) אינה ניתנת לכתיבה על ידי שרת web. אנא גשו אל <a href=\"%2\"> הגדרות הנתיב  page</a>ותקנו זאת.<br/>"
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "לא נבדק ה-URL המרוחק להרחבות מאחר ש-ext_repo_url מכוון ל\"שגוי\"."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -53,10 +48,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "אין כרגע בתיקיית ההרחבות הציבוריות של CiviCRM הרחבות התואמות לגרסה %2 (<a href=\"%1\" בקשת ההרחבות היתה לכתובת זו </a>). אם תרצו להתקין הרחבה שאינה מסומנת כתואמת, תוכלו <a href=\"%3\"> להוריד ולהתקין את ההרחבות באופן ידני </a> (דורש גישה לשרת ה-web שלכם).<br/>"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "אין הרחבות זמינות לגרסה זו"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -114,6 +105,13 @@ msgid ""
 msgstr "לא תוכלו להתקין כעת הרחבות מםני שהתקנת ה-PHP שלכם אינה תומכת בארכיוני ZIP. אנא בקשו ממנהל/ת המערכת שלכם להתקין את הרחבת ה-PHP-ZIP הסטנדרטית."
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "אזהרה: מנגנון ההורדה עשוי להיכשל הורדת קבצים הדורשים הכוונת HTTP מחודשת. ניתן לכוון נושא זה בעזרת open_basedir or safe_mode של PHP."
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "לא ניתן לפרוס את ההרחבה: מבנה תיקייה (diretory) שגוי."
 
@@ -157,9 +155,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "העתק של ההרחבה (%1) נמצא בתיקית המערכת (%2). העתק המערכת יישמר, אבל העותק החדש יהיה בשימוש."
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "אזהרה: מנגנון ההורדה עשוי להיכשל הורדת קבצים הדורשים הכוונת HTTP מחודשת. ניתן לכוון נושא זה בעזרת open_basedir or safe_mode של PHP."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr ""
