po: update po/he_IL/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/he_IL/menu.po
+++ b/po/he_IL/menu.po
@@ -12,9 +12,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-05 10:41+0000\n"
-"Last-Translator: xnhy <mrottman3@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Hebrew (http://www.transifex.com/civicrm/civicrm/language/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -131,8 +131,8 @@ msgid "Case Activity"
 msgstr "פעילות בתיק"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "דוח תיקים"
+msgid "Case Activity Audit"
+msgstr "ביקורת פעילות למקרה"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -151,8 +151,8 @@ msgid "Assign to Another Client"
 msgstr "הקצאה ללקוח אחר"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "יצירת פעולה לתיק"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -176,10 +176,6 @@ msgstr "מצבי תיקים"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "אמצעי מפגש"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "שנה מצב פעילות"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -254,6 +250,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "סוגי פיננסים"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "תשלום חדש"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -271,9 +271,15 @@ msgstr "כרטיסי אשראי מכובדים"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "סוגי אשראי רך"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "תשלומים"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "תרומות נשנות"
@@ -324,6 +330,23 @@ msgstr "אצוות (Batch) ניהול חשבונות"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "יצוא אצוות (Batch) ניהול חשבונות"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "הצגת תשלום"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "הגדרות הרכיב CiviContribute"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "חשבונית PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "חשבונית דוא\"ל"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -477,6 +500,11 @@ msgstr "העדפות חיפוש"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "העדפות תאריך"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "תפריט ניווט"
 
@@ -510,10 +538,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "הגדרת מועד שליחת תזכורות"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "לעולם לא להציג פריט זה"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -531,6 +555,11 @@ msgstr "הדפסת עמוד PDG"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "אפשרויות סגנון תקשורת"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "עיצוב ברכות בדוא״ל"
 
@@ -544,8 +573,9 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "תבניות נמענים"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
+msgid "Languages, Currency, Locations"
 msgstr "שפה, מטבע מקומי, מיקום"
 
 #: xml/templates/civicrm_navigation.tpl
@@ -697,10 +727,6 @@ msgid "Administer CiviCRM"
 msgstr "ניהול מערכת CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "ערכי אפשרויות"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "מחירונים"
 
@@ -768,10 +794,6 @@ msgstr "בונה חיפושים"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "חיפושים מותאמיםם"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "חיפוש פשוט"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -863,6 +885,10 @@ msgid "CiviCRM Blog"
 msgstr "בלוג CiviCRM"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "רכיבי לוח בקרה אישי: תיקים"
 
@@ -917,6 +943,10 @@ msgid "Import Activities"
 msgstr "יבוא פעילויות"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "יבוא מידע מותאם רב-ערכי"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "שדרוג CiviCRM"
 
@@ -953,12 +983,16 @@ msgid "Browse Uploaded files"
 msgstr "עיון בקבצים שהועלו"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr "מחיקת קובץ"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "יציאה"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "ממשק נתוני CiviCRM (API)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -972,6 +1006,10 @@ msgstr "QUnit"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "עורך פרופיל"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "אישור תאריכים"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1068,6 +1106,10 @@ msgid "Event Online Registration"
 msgstr "הרשמה לאירוע באינטרנט"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "ארוע חוזר"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "מיקום בכינוס"
 
@@ -1101,6 +1143,10 @@ msgstr "הסרה מסל הקניות"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "הצגת סל הקניות"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "שינוי בחירות הרשמה"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1155,8 +1201,8 @@ msgid "Resubscribe"
 msgstr "הרשמה מחדש לקבוצת דיוור אלקטרוני זו"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "ביטול המינוי לכל קבוצות הדיוור האלקטרוני מארגון זה"
+msgid "Opt-out"
+msgstr "ביטול"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1291,6 +1337,11 @@ msgstr "רשימת דוחות"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "חדשות CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1429,6 +1480,16 @@ msgstr "איתור SMS המוני"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "מבחן A/B חדש"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "ניהול מבחני A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "דו\"חות חברות"
 
@@ -1534,11 +1595,6 @@ msgstr "התאמה לשונית"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "שפה, מטבע מקומי, מיקום"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "אפשרויות שפה מועדפת"
 
@@ -1556,6 +1612,11 @@ msgstr "הרשאות גישה (Access Control)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "הגדרות מערכת"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1624,6 +1685,11 @@ msgstr "Civiמענקים"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "מצב מענק"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "Civiחברות"
 
@@ -1634,8 +1700,13 @@ msgstr "כל הדו\"חות"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "עזרה"
+msgid "Support"
+msgstr "תמיכה"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr "התחל כאן"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1644,18 +1715,43 @@ msgstr "תיעוד"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "פורום הקהילה"
+msgid "Ask a question"
+msgstr "שאל שאלה"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "השתתפות"
+msgid "Get expert help"
+msgstr "קבל תמיכה מקצועית"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "על CiviCRM"
+msgid "About CiviCRM"
+msgstr "אודות civicrm"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr "רשום את האתר שלך"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr "הצטרף לcivicrm"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "מפתח/ת"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "חוקר ממשק נתונים (API)"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "מסמכי פיתוח"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1882,6 +1978,11 @@ msgstr "מספק פרטי עסקות עבור כל התרומות והתשלומ
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "מספר מידע על מצב התרומות החוזרות"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "סיכום חברות"
 
@@ -2051,144 +2152,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "דו\"ח מפורט לסריקות, מאגרי טלפונים, walk lists וסקרים אחרים."
 
-msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "ביקורת פעילות למקרה"
-
-msgctxt "menu"
-msgid "New Payment"
-msgstr "תשלום חדש"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "סוגי אשראי רך"
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "View Payment"
-msgstr "הצגת תשלום"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "אפשרויות סגנון תקשורת"
+msgid "Configure CKEditor"
+msgstr ""
 
 msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "יבוא מידע מותאם רב-ערכי"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
 
 msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "שינוי בחירות הרשמה"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Grant Status"
-msgstr "מצב מענק"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer"
-msgstr "מפתח/ת"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "API Explorer"
-msgstr "חוקר ממשק נתונים (API)"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer Docs"
-msgstr "מסמכי פיתוח"
+msgid "Insert CiviCRM Content"
+msgstr ""
 
 msgctxt "menu"
-msgid "File on Case"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "הגדרות הרכיב CiviContribute"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "חשבונית PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "חשבונית דוא\"ל"
+msgid "System Status"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr "העדפות תאריך"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "מחיקת קובץ"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "ממשק נתוני CiviCRM (API)"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "אישור תאריכים"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "ארוע חוזר"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "ביטול"
+msgid "Components"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "New A/B Test"
-msgstr "מבחן A/B חדש"
+msgid "Extensions"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "ניהול מבחני A/B"
+msgid "Activity Details"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Support"
-msgstr "תמיכה"
+msgid "Activity Summary"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get started"
-msgstr "התחל כאן"
+msgid "Shows activity statistics by type / date"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Ask a question"
-msgstr "שאל שאלה"
+msgid "Pledge Detail"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get expert help"
-msgstr "קבל תמיכה מקצועית"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "אודות civicrm"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr "רשום את האתר שלך"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr "הצטרף לcivicrm"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "מספר מידע על מצב התרומות החוזרות"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
