--- a/po/hi_IN/queue.po
+++ b/po/hi_IN/queue.po
@@ -1,17 +1,16 @@
-# Copyright CiviCRM LLC (c) 2004-2012
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# pratik kumar <kpratik217@gmail.com>, 2013
+# Pratik <kpratik217@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2013-05-31 09:06-0400\n"
-"PO-Revision-Date: 2013-07-06 06:14+0000\n"
-"Last-Translator: pratik kumar <kpratik217@gmail.com>\n"
-"Language-Team: Hindi (http://www.transifex.com/projects/p/civicrm/language/hi/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Hindi (http://www.transifex.com/civicrm/civicrm/language/hi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,3 +36,7 @@ msgstr "कतार आइटम डातस"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "क्यू रन्नर"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
